--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,16 @@
 version: "3.4"
 services:
-  vpn:
-    container_name: vpn
-    image: dperson/openvpn-client:latest
-    cap_add:
-      - net_admin # required to modify network interfaces
-    restart: unless-stopped
-    volumes:
-      - /dev/net:/dev/net:z # tun device
-      - ${ROOT}/config/vpn:/vpn # OpenVPN configuration
-    security_opt:
-      - label:disable
-    ports:
-      - 8112:8112 # port for deluge web UI to be reachable from local network
-    command: '-f "" -r 192.168.1.0/24' # enable firewall and route local network traffic
-
   deluge:
     container_name: deluge
     image: linuxserver/deluge:latest
     restart: unless-stopped
-    network_mode: service:vpn # run on the vpn network
+    network_mode:host
     environment:
       - PUID=${PUID} # default user id, defined in .env
       - PGID=${PGID} # default group id, defined in .env
       - TZ=${TZ} # timezone, defined in .env
     volumes:
-      - ${ROOT}/downloads:/downloads # downloads folder
+      - ${ROOT}/hdd2/auto_media/downloads:/downloads # downloads folder
       - ${ROOT}/config/deluge:/config # config files
 
   jackett:
@@ -41,20 +26,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ${ROOT}/downloads/torrent-blackhole:/downloads # place where to put .torrent files for manual download
       - ${ROOT}/config/jackett:/config # config files
-
-  nzbget:
-    container_name: nzbget
-    image: linuxserver/nzbget:latest
-    restart: unless-stopped
-    network_mode: host
-    environment:
-      - PUID=${PUID} # default user id, defined in .env
-      - PGID=${PGID} # default group id, defined in .env
-      - TZ=${TZ} # timezone, defined in .env
-    volumes:
-      - ${ROOT}/downloads:/downloads # download folder
-      - ${ROOT}/config/nzbget:/config # config files
-
+      
   sonarr:
     container_name: sonarr
     image: linuxserver/sonarr:latest
@@ -67,8 +39,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${ROOT}/config/sonarr:/config # config files
-      - ${ROOT}/complete/tv:/tv # tv shows folder
-      - ${ROOT}/downloads:/downloads # download folder
+      - ${ROOT}/hdd1/TV_Shows:/tv # tv shows folder
+      - ${ROOT}/hdd2/auto_media/downloads:/downloads # download folder
 
   radarr:
     container_name: radarr
@@ -82,8 +54,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${ROOT}/config/radarr:/config # config files
-      - ${ROOT}/complete/movies:/movies # movies folder
-      - ${ROOT}/downloads:/downloads # download folder
+      - ${ROOT}/hdd1/Movies:/movies # movies folder
+      - ${ROOT}/hdd2/auto_media/downloads:/downloads # download folder
 
   plex-server:
     container_name: plex-server
@@ -95,7 +67,7 @@ services:
     volumes:
       - ${ROOT}/config/plex/db:/config # plex database
       - ${ROOT}/config/plex/transcode:/transcode # temp transcoded files
-      - ${ROOT}/complete:/data # media library
+      - ${ROOT}/hdd1:/data # media library
 
   bazarr:
     container_name: bazarr
@@ -109,5 +81,35 @@ services:
       - UMASK_SET=022 #optional
     volumes:
       - ${ROOT}/config/bazarr:/config # config files
-      - ${ROOT}/complete/movies:/movies # movies folder
-      - ${ROOT}/complete/tv:/tv # tv shows folder
+      - ${ROOT}/hdd1/Movies:/movies # movies folder
+      - ${ROOT}/hdd1/TV_Shows:/tv # tv shows folder
+
+  pyload:
+    image: lscr.io/linuxserver/pyload-ng
+    container_name: pyload-ng
+    environment:
+      - PUID=$(PUID)
+      - PGID=$(PGID)
+      - TZ=${TZ}
+    volumes:
+      - /path/to/pyload/config:/config
+      - /path/to/downloads:/downloads
+    ports:
+      - 8000:8000
+    restart: unless-stopped
+    
+   heimdall:
+    image: lscr.io/linuxserver/heimdall
+    container_name: heimdall
+    environment:
+      - PUID=$(PUID)
+      - PGID=$(PGID)
+      - TZ=${TZ}
+    volumes:
+      -  ${ROOT}/config/bazarr:/config # config files
+    ports:
+      - 80:80
+      - 443:443
+    restart: unless-stopped
+    
+   
